--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ permissions:
   contents: write
 
 env:
-  GO_VERSION: '1.21'
+  GO_VERSION: '1.24.5'
 
 jobs:
   build:
@@ -52,7 +52,7 @@ jobs:
         GOARCH: amd64
         CGO_ENABLED: 0
       run: |
-        go build -ldflags="-s -w" -o lmu-racing-telemetry-windows-amd64.exe .
+        go build -ldflags="-s -w -X github.com/mslomnicki/LMURacingTelemetry/pkg/ui.Version=${{ steps.version.outputs.VERSION }}" -o lmu-racing-telemetry-windows-amd64.exe .
         
     - name: Build for Linux AMD64
       env:
@@ -68,7 +68,7 @@ jobs:
         GOARCH: amd64
         CGO_ENABLED: 0
       run: |
-        go build -ldflags="-s -w" -o lmu-racing-telemetry-macos-amd64 .
+        go build -ldflags="-s -w -X github.com/mslomnicki/LMURacingTelemetry/pkg/ui.Version=${{ steps.version.outputs.VERSION }}" -o lmu-racing-telemetry-macos-amd64 .
         
     - name: Build for macOS ARM64
       env:
